optimize element identification
- element identification algorithm will now attempt to capture all needed element information (5 code blocks) in parallel. This should speed up element identification significantly especially with remote executions.